--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:id="@+id/editorLayout"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/white">
+
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar" />
 
     <EditText
         android:id="@+id/editorText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="top"
-        android:textColor="@color/white"/>
-
+        android:layout_below="@+id/app_bar"
+        android:textColor="@color/black"/>
 </RelativeLayout>
