--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
-    <color name="colorPrimary">#0F7173</color>
+    <color name="colorPrimary">#4245f4</color>
 </resources>
