--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -13,6 +13,7 @@
         android:id="@+id/editorText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textSize="12sp"
         android:gravity="top"
         android:layout_below="@+id/app_bar"
         android:textColor="@color/black"/>
