--- a/app/src/main/res/layout/activity_projects.xml
+++ b/app/src/main/res/layout/activity_projects.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.pp.mte.ProjectsActivity">
+    tools:context="com.pp.mte.view.ProjectsActivity">
 
     <include
         layout = "@layout/app_bar"
