--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/undoBtn"
+        android:icon="@drawable/undo"
+        android:title="Undo"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/drawBtn"
         android:icon="@drawable/drawbtn"
         android:title="Draw"
         app:showAsAction="always" />
+
 </menu>
